--- a/网络带宽.md
+++ b/网络带宽.md
@@ -1,28 +1,31 @@
-# 网络带宽预算
+# 网络带宽
 
-#### 网络摄像头  
+#### 流媒体应用
+
 ----
 
 **视频编码**
 
 **H.264** 压缩
-<table><thead><tr><th style="text-align:left"><div><div class="table-header"><p>分辨率</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>水平像素（点）</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>垂直像素（点）</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>图像位深bit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>单幅图像数据量Mbit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>帧率fps</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>全帧码流Mbit/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>视频流 Mbit/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>网络带宽Mbit/s</p></div></div></th></tr></thead><tbody><tr><td style="text-align:left"><div><div class="table-cell"><p>高清720P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1280</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>720</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>21</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>506</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>6</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>超清1080P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1080</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>47</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1139</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>14</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>7</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>2K（500万）</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2560</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>113</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2700</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>34</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>18</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>4K（8百万）</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3840</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2160</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>190</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>50</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9492</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>119</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>62</p></div></div></td></tr></tbody></table>
+<table><thead><tr><th style="text-align:left"><div><div class="table-header"><p>分辨率</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>水平像素(点)</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>垂直像素(点)</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>图像位深bit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>单幅图像数据量M</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>帧率fps</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>全帧码流M/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>视频流 M/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>网络带宽M/s</p></div></div></th></tr></thead><tbody><tr><td style="text-align:left"><div><div class="table-cell"><p>高清720P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1280</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>720</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>21</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>506</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>6</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>超清1080P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1080</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>47</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1139</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>14</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>7</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>2K(500万)</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2560</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>113</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2700</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>34</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>18</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>4K(8百万)</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3840</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2160</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>190</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>50</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9492</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>119</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>62</p></div></div></td></tr></tbody></table>
 
 **H.265** 压缩
-<table><thead><tr><th style="text-align:left"><div><div class="table-header"><p>分辨率</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>水平像素（点）</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>垂直像素（点）</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>图像位深bit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>单幅图像数据量Mbit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>帧率fps</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>全帧码流Mbit/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>视频流 Mbit/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>网络带宽Mbit/s</p></div></div></th></tr></thead><tbody><tr><td style="text-align:left"><div><div class="table-cell"><p>高清720P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1280</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>720</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>21</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>506</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>超清1080P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1080</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>47</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1139</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>7</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>4</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>2K（500万）</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2560</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>113</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2700</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>17</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>4K（8百万）</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3840</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2160</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>190</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>50</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9492</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>59</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>31</p></div></div></td></tr></tbody></table>
+<table><thead><tr><th style="text-align:left"><div><div class="table-header"><p>分辨率</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>水平像素(点)</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>垂直像素(点)</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>图像位深bit</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>单幅图像数据量M</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>帧率fps</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>全帧码流M/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>视频流 M/S</p></div></div></th><th style="text-align:left"><div><div class="table-header"><p>网络带宽M/s</p></div></div></th></tr></thead><tbody><tr><td style="text-align:left"><div><div class="table-cell"><p>高清720P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1280</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>720</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>21</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>506</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>超清1080P</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1080</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>47</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1139</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>7</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>4</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>2K(500万)</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2560</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>1920</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>113</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2700</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>17</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9</p></div></div></td></tr><tr><td style="text-align:left"><div><div class="table-cell"><p>4K(8百万)</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>3840</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>2160</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>24</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>190</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>50</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>9492</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>59</p></div></div></td><td style="text-align:left"><div><div class="table-cell"><p>31</p></div></div></td></tr></tbody></table>
 
 ----
+
+#### 网络摄像头
 
 **4G网卡**
 
 ----
 
-优化流量设置：网络摄像头开启 1M~5M bps 的 H.265 智能编码，每天产生流量：
-* 待机                  5M ~ 30M
-* 流畅360P/1~2小时      200M ~ 500M
-* 流畅360P/24小时    2G/1Mbps ~ 5G/2Mbps
-* 高清720P/24小时    5G/1Mbps ~ 10G/2Mbps
-* 超清1080P/24小时  10G/1Mbps ~ 20G/2Mbps
+优化流量设置：摄像头开启 1M~5Mbps 的 H.265 智能编码，每天预计产生流量：
+* 待机：                  5M ~ 30M
+* 流畅360P/1~2小时：      200M ~ 500M
+* 流畅360P/24小时：    2G/1Mbps ~ 5G/2Mbps
+* 高清720P/24小时：    5G/1Mbps ~ 10G/2Mbps
+* 超清1080P/24小时：  10G/1Mbps ~ 20G/2Mbps
 
 移动套餐选择：
 * 19元80G/月
@@ -32,24 +35,38 @@
 
 ----
 
-**直播服务器**
+**流媒体服务器**
 
-* 方案1：nginx / 开源.rtsp + h264
-* 方案2：tomcat / 收费.wowza(rtsp或rtmp) + h264或h265
+硬件设备支持的协议与国标标准
 
-----
+> **ONVIF** 适合在局域网中使用，摄像头有固定IP，流媒体服务器主动获得摄像头的IP进行接入，然后进行控制或视频调取。
 
-##### 华为云
-* 规格(50个摄像头)： 通用计算型 S3 | 8核 | 16GB | 50 Mbit/s | ￥4.2万~5万 / 年
-* 规格(200个摄像头)： 通用计算型 S3 | 8核 | 16GB | 200 Mbit/s | ￥16.2万~20万 / 年
+> **GB28181** 适合跨网传输和接入外网访问，不需要摄像头有固定IP，摄像头主动连接流媒体服务器，然后进行远程控制。
+
+软件技术方案
+
+* 方案1：开源. <a href="https://github.com/arut/nginx-rtmp-module" target="_blank">ffmpeg/nginx/rtsp</a> + h264 (不支持h265)
+* 方案2：收费. <a href="https://www.wowza.com/docs/how-to-install-and-configure-wowza-streaming-engine" target="_blank">wowza (rtsp & rtmp & HLS)</a> + (h264 & h265)
+
 
 ##### 天翼云
-* 规格(50个摄像头)： 通用计算型 C6 | 8核 | 16GB | 50 Mbit/s | ￥2.4万~3万 / 年
-* 规格(200个摄像头)： 通用计算型 S3 | 8核 | 16GB | 200 Mbit/s | ￥7.9万~10万 / 年
+
+* 规格(50路1080P摄像头)： 通用计算型 C6 | 8核 | 16GB | 50 M/s | ￥2.4万~3万 / 年
+* 规格(200路1080P摄像头)： 通用计算型 C6 | 8核 | 16GB | 200 M/s | ￥7.9万~10万 / 年
+
+##### 华为云
+* 规格(50路1080P摄像头)： 通用计算型 S3 | 8核 | 16GB | 50 M/s | ￥4.2万~5万 / 年
+* 规格(200路1080P摄像头)： 通用计算型 S3 | 8核 | 16GB | 200 M/s | ￥16.2万~20万 / 年
 
 ----
 
-#### 其它
-    测试
-    
+#### 开放平台
+> 10路指支持同时播放10个摄像头
+
+##### 萤石
+* 规格(10路720P/5路1080P摄像头)： 5 M/s  6千 / 年
+* 规格(60路720P/30路1080P摄像头)： 30 M/s  1.08万 / 年
+* 规格(100路720P/50路1080P摄像头)： 50 M/s  2.4万 / 年
+
+
 ----
