--- a/网络安全.md
+++ b/网络安全.md
@@ -204,12 +204,14 @@
       * 提供给用户通过手机号注册账号的功能，管理员后台添加用户账号的功能；
       * 手机号+短信验证进行登录；账号名称+密码验证进行登录；可接入开放平台的授权登录+系统账号绑定功能。
     * 3） 系统用户的身份鉴别信息应具有不易被冒用的特点，例如口令长度、复杂性和定期的更新等；
-      * 账号口令长度至少6位、字母+数字+特殊字符至少包含两种；
-      * 禁止跨域请求或限制请求来源 Access-Control-Allow-*
-      * 开启内容保护 X-Content-Type-Options: nosniff 
-      * 开启XSS保护 X-XSS-Protection: 1; mode=block 
-      * 防止iframe加载网页 X-Frame-Options: SAMEORIGIN 
-      * 防止重放攻击 X-Request-Id: GUID 
+      * 账号口令长度至少8位、字母+数字+特殊字符至少包含两种；
+      * 限制或禁用跨域请求 Access-Control-Allow-* (限制来源) <add name="Access-Control-Allow-Origin" value="http://www.example.com,https://www.example.com"/>
+      * 强制HTTPS安全传输 <add name="Strict-Transport-Security" value="max-age=63072000; includeSubdomains; preload" />
+      * 开启内容保护 <add name="X-Content-Type-Options" value="nosniff" />
+      * 开启CSP保护(阻止加载外部资源) <add name="Content-Security-Policy" value="frame-ancestors 'self' *.cn *.com; frame-src 'self'; script-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com; style-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com  https:; img-src 'self' https:; media-src 'self' https:; connect-src https:; font-src https:; object-src 'none';" />
+      * 开启XSS保护 <add name="X-XSS-Protection" value="1; mode=block" />
+      * 防止iframe加载外部资源 X-Frame-Options: SAMEORIGIN (限制外部资源) <add name="X-Frame-Options" value="ALLOW-FROM https://***.cn, https://***.com" />
+      * 防止重放攻击 X-Request-Id: GUID or Ulid or RayID 
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
       * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
