--- a/网络安全.md
+++ b/网络安全.md
@@ -204,23 +204,23 @@
       * 提供给用户通过手机号注册账号的功能，管理员后台添加用户账号的功能；
       * 手机号+短信验证进行登录；账号名称+密码验证进行登录；可接入开放平台的授权登录+系统账号绑定功能。
     * 3） 系统用户的身份鉴别信息应具有不易被冒用的特点，例如口令长度、复杂性和定期的更新等；
-      * 账号口令长度至少8位、字母+数字+特殊字符至少包含两种；
-      * 限制或禁用跨域请求 Access-Control-Allow-* (限制来源) <add name="Access-Control-Allow-Origin" value="http://www.example.com,https://www.example.com"/>
-      * 强制HTTPS安全传输 <add name="Strict-Transport-Security" value="max-age=63072000; includeSubdomains; preload" />
-      * 开启内容保护 <add name="X-Content-Type-Options" value="nosniff" />
-      * 开启CSP保护(阻止加载外部资源) <add name="Content-Security-Policy" value="frame-ancestors 'self' *.cn *.com; frame-src 'self'; script-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com; style-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com  https:; img-src 'self' https:; media-src 'self' https:; connect-src https:; font-src https:; object-src 'none';" />
-      * 开启XSS保护 <add name="X-XSS-Protection" value="1; mode=block" />
-      * 防止iframe加载外部资源 X-Frame-Options: SAMEORIGIN (限制外部资源) <add name="X-Frame-Options" value="ALLOW-FROM https://***.cn, https://***.com" />
+      * 账号口令长度至少8位、字母+数字+特殊字符至少包含两种；账号密码的数据库存储，采用非对称哈希加密算法；设置定期修改密码的策略；
+      * 限制或禁用跨域请求 Access-Control-Allow-* (限制来源) ＜add name="Access-Control-Allow-Origin" value="http://www.example.com,https://www.example.com"/＞
+      * 强制HTTPS安全传输 ＜add name="Strict-Transport-Security" value="max-age=63072000; includeSubdomains; preload" /＞
+      * 开启内容保护 ＜add name="X-Content-Type-Options" value="nosniff" /＞
+      * 开启CSP保护(阻止加载外部资源) ＜add name="Content-Security-Policy" value="frame-ancestors 'self' *.cn *.com; frame-src 'self'; script-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com; style-src 'self' cdn.bootcdn.net cdnjs.cloudflare.com  https:; img-src 'self' https:; media-src 'self' https:; connect-src https:; font-src https:; object-src 'none';" /＞
+      * 开启XSS保护 ＜add name="X-XSS-Protection" value="1; mode=block" /＞
+      * 防止iframe加载外部资源 X-Frame-Options: SAMEORIGIN (限制外部资源) ＜add name="X-Frame-Options" value="ALLOW-FROM https://***.cn, https://***.com" /＞
       * 防止重放攻击 X-Request-Id: GUID or Ulid or RayID 
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
-      * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
+      * 手机号+短信验证进行登录；账号名+密码验证进行登录；长期未登录后需在常用登录设备上进行验证(短信确认)；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
       * 配置登录Session过期时间、JWT身份令牌过期时间；
-      * 可限制一个账号一小时内登录失败的次数；
+      * 限制一个账号一小时内登录失败的次数；超过失败次数后阻止账号登录并锁定下次登录时间；
     * 6） 应具有鉴别`警示功能`；
-      * 记录用户登录IP与设备，出现异地登录时可发送短信提醒用户；
+      * 记录用户登录IP与设备，出现异地登录时发送短信提醒；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
-      * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除系统缓存和Redis缓存。
+      * 用户会话过期、身份认证令牌过期，过期后自动清除系统缓存。
 * 访问控制
     * 1） 应依据安全策略控制用户对客体(资源文件&接口数据)的访问；
        - [`OPA`策略引擎](https://www.openpolicyagent.org/docs/)`推荐`该`CNCF`项目,由`Google`,`微软`,`Styra`等共同搭建。
