--- a/网络安全.md
+++ b/网络安全.md
@@ -19,6 +19,14 @@
 # MD5解密:接口
 > curl https://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
+* [端口扫描`naabu`](https://github.com/projectdiscovery/naabu)
+~~~bash
+naabu -host baidu.com
+naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
+naabu -host 39.156.66.10 -json           # 输出json格式
+naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
+naabu -list hosts.txt
+~~~
 
 > 源代码
 * [分析`Bugs、漏洞、安全性、测试覆盖率、代码行、代码质量等`](https://sonarcloud.io/dashboard?id=owncloud_ocis)
