--- a/网络安全.md
+++ b/网络安全.md
@@ -17,9 +17,9 @@
 > md5 123456.txt # 加密文本"123456" >> E10ADC3949BA59ABBE56E057F20F883E
 > hasher md5 -i 123456.txt #加密文本>> e10adc3949ba59abbe56e057f20f883e
 # MD5解密:接口
-> curl https://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
+> curl http://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
-* [端口扫描`naabu`](https://github.com/projectdiscovery/naabu)
+* [`端口`扫描工具`naabu`](https://github.com/projectdiscovery/naabu)
 ~~~bash
 naabu -host baidu.com
 naabu -host baidu.com -nmap-cli 'nmap -sV nmap-output'
