--- a/网络安全.md
+++ b/网络安全.md
@@ -79,6 +79,9 @@ naabu -list hosts.txt
 * 补丁管理：北信源、360、启明星辰、金盾软件、上海创多、交大捷普、亚信安全、金山
 * 打印安全/打印管理/打印审计：北京恒安讯佳、北信源、中孚信息、安普锐、天锐绿盾、金山、保旺达、哈尔滨朗威、天喻软件、瑞达信息、山丽信息、武汉百易时代、鼎盾科技、思为同飞
 
+- Windows [安全更新](https://msrc.microsoft.com/update-guide)
+    - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
+
 #### 应用安全
 
 * 网页防篡改：安恒信息、智恒科技、赛蓝、山东中创、绿盟科技、启明星辰、上海天存、上海天泰、福州深空、北京通元、国舜股份、蓝盾、安全狗、WebRay远江、杭州迪普、上讯信息、交大捷普、青松云安全、海峡信息、江民科技、立思辰、六壬网安
