--- a/网络安全.md
+++ b/网络安全.md
@@ -28,6 +28,11 @@ naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
 ~~~
+
+> Windows [更新](https://msrc.microsoft.com/update-guide)
+    - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
+
+
 # 搜索引擎
 [撒旦](https://www.shodan.io/)、[ZoomEye](https://www.zoomeye.hk/)
 
@@ -78,9 +83,6 @@ naabu -list hosts.txt
 * 移动存储介质管理：北信源、北京天桥、启明星辰、金盾软件、广州国迈、哈尔滨朗威、上海创多、亿赛通、交大捷普、上海浩迈、上海格尔、安天、金山、天喻软件、山丽信息、亚东软件
 * 补丁管理：北信源、360、启明星辰、金盾软件、上海创多、交大捷普、亚信安全、金山
 * 打印安全/打印管理/打印审计：北京恒安讯佳、北信源、中孚信息、安普锐、天锐绿盾、金山、保旺达、哈尔滨朗威、天喻软件、瑞达信息、山丽信息、武汉百易时代、鼎盾科技、思为同飞
-
-- Windows [安全更新](https://msrc.microsoft.com/update-guide)
-    - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
 
 #### 应用安全
 
