--- a/网络安全.md
+++ b/网络安全.md
@@ -32,6 +32,9 @@ naabu -list hosts.txt
 > Windows [更新](https://msrc.microsoft.com/update-guide)
     - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
 
+> Linux + Java [高危漏洞](https://github.com/White-hua/Apt_t00ls)
+    - 泛微、蓝凌、用友、万户、致远、通达、帆软，中间件，安全设备等
+
 
 # 搜索引擎
 [撒旦](https://www.shodan.io/)、[ZoomEye](https://www.zoomeye.hk/)
