--- a/网络安全.md
+++ b/网络安全.md
@@ -30,10 +30,14 @@ naabu -list hosts.txt
 ~~~
 
 > Windows [更新](https://msrc.microsoft.com/update-guide)
+
     - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
 
 > Linux + Java [高危漏洞](https://github.com/White-hua/Apt_t00ls)
-    - 泛微、蓝凌、用友、万户、致远、通达、帆软，中间件，安全设备等
+
+    - [泛微](https://www.weaver.com.cn/)、[蓝凌](https://www.landray.com.cn/)、[用友](https://www.scscyy.com/)、[万户](https://www.whir.net/)、[致远](https://www.seeyon.com/)、[通达](https://www.tongda2000.com/)、[帆软](https://sem.fanruan.com/)
+    - 中间件[Redis漏洞CVE-2021-32761](https://cn.bing.com/search?q=Redis+CVE-2021-32761)
+    - 安全设备
 
 
 # 搜索引擎
