--- a/网络安全.md
+++ b/网络安全.md
@@ -28,6 +28,7 @@ naabu -host 39.156.66.10 -json           # 输出json格式
 naabu -host 39.156.66.10 -silent | *.exe # 通过管道输出给其它工具
 naabu -list hosts.txt
 ~~~
+* [浏览器数据解密](https://github.com/angenalZZZ/HackBrowserData)
 
 > Windows [更新](https://msrc.microsoft.com/update-guide) 
     - [WiFi漏洞CVE-2024-30078](https://msrc.microsoft.com/update-guide/vulnerability/CVE-2024-30078)
