--- a/网络安全.md
+++ b/网络安全.md
@@ -10,6 +10,8 @@
 * [`AVS`Anti-Virus Software 杀毒软件](https://cn.bing.com/search?q=杀毒软件&qs=n&form=QBRE&sp=-1&pq=杀毒软件&sc=8-4&sk=&cvid=1DA95C2ED98B4E5B826CF2130FF24B98)、[`BAD`Botnet Activity Detection 僵尸网络识别](https://cn.bing.com/search?q=Botnet+Activity+Detection&qs=n&form=QBRE&sp=-1&pq=botnet+activity+detection&sc=0-25&sk=&cvid=CF04DC7EA75140A0A0C362163B4E942B)、[`IDS`Intrusion Detection Systems 入侵监测](https://cn.bing.com/search?q=Intrusion+Detection+Scan&qs=n&form=QBLH&sp=-1&pq=intrusion+detection+scan&sc=0-24&sk=&cvid=351462D76D64451FB9044527F99A3A24)...
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
 * [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[MD5解密](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
+* [`AES-256`](http://en.wikipedia.org/wiki/Advanced_Encryption_Standard)[加密+过期时间](https://cryptobin.co/)[Javascript-Crypto](https://github.com/bitwiseshiftleft/sjcl)
+* [`HTML-混淆`](https://ra3dstudio.com/html-obfuscator-encode)
 ~~~bash
 > chcp 65001 # 编码切换: UTF-8
 > chcp 936   # 编码切换: GBK (ANSI/OEM - 简体中文GBK)
