--- a/网络安全.md
+++ b/网络安全.md
@@ -17,7 +17,7 @@
 * [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[MD5解密](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
 * [`AES 256`](http://en.wikipedia.org/wiki/Advanced_Encryption_Standard)[加密&过期时间](https://cryptobin.co/)[Javascript Crypto Library](https://github.com/bitwiseshiftleft/sjcl)
 * [`Chilkat加密`](https://www.example-code.com/dotnet-core/encryption.asp)、[`IPWorks加密`](https://www.nsoftware.com/kb/help?pid=IE)
-* [`HTML混淆`](https://ra3dstudio.com/html-obfuscator-encode)
+* [`HTML混淆`](https://ra3dstudio.com/html-obfuscator-encode)、[`JS混淆`](https://blog.ntan520.com/article/11179)
 ~~~bash
 > chcp 65001 # 编码切换: UTF-8
 > chcp 936   # 编码切换: GBK (ANSI/OEM - 简体中文GBK)
