--- a/电商代理.md
+++ b/电商代理.md
@@ -1,18 +1,25 @@
 # 电商
 
-### 代理人
+### 代理
 
 - 水果
-  - 拼多多
-  - 美团
-  - 京东
-  - 淘宝
+  - 商家小店
+    - [拼多多](https://www.pinduoduo.com)
+    - [京东](https://lai.jd.com)
+    - [淘宝](https://ishop.taobao.com)
+    - [美团](https://e.meituan.com)
+    - [抖音](https://fxg.jinritemai.com)
+    - [快手](https://www.kwaixiaodian.com)
+    - [小红书](https://ec.xiaohongshu.com)
+  
+  - 商城品牌
+    - [深圳花果山科技有限公司](http://www.huaguoshan.com)
 ~~~
-1. 水果电商，是一条最难的赛道！第一天就很多售后问题(坏果/未熟果)！
-例如：樱桃，选果装箱时，分三类果：
-快递短+两天内+特熟果
-快递长+七天内+中熟果
-快递长+十天内+未熟果
+1. 水果电商，是一条最难的赛道！第一天就很多售后问题(坏果)！
+例如：樱桃，选果装箱时，分三类：
+  快递短+两天内+特熟果
+  快递长+七天内+中熟果
+  快递长+十天内+未熟果
 ~~~
 
 ---
