--- a/电商代理.md
+++ b/电商代理.md
@@ -2,7 +2,7 @@
 
 ### 代理
 
-- 水果
+- `水果`
   - 商家小店
     - [拼多多](https://www.pinduoduo.com)
     - [京东](https://lai.jd.com)
@@ -14,12 +14,14 @@
   
   - 商城品牌
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
+
+不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。
 ~~~
-1. 水果电商，是一条最难的赛道！第一天就很多售后问题(坏果)！
-例如：樱桃，选果装箱时，分三类：
-  快递短+两天内+特熟果
-  快递长+七天内+中熟果
-  快递长+十天内+未熟果
+1. 水果电商，是一条最难的赛道！
+例如：樱桃，包装时分三类：减少售后问题(坏果)
+  同城快递=两天内+特熟果
+  物流发货=七天内+中熟果
+  特殊买家=十天内+未熟果
 ~~~
 
 ---
