--- a/电商代理.md
+++ b/电商代理.md
@@ -4,14 +4,8 @@
 
 - `水果`
   - 商家小店
-    - [拼多多](https://www.pinduoduo.com)
-    - [京东](https://lai.jd.com)
-    - [淘宝](https://ishop.taobao.com)
-    - [美团](https://e.meituan.com)
-    - [抖音](https://fxg.jinritemai.com)
-    - [快手](https://www.kwaixiaodian.com)
-    - [小红书](https://ec.xiaohongshu.com)
-  
+    - [拼多多](https://www.pinduoduo.com)、[京东](https://lai.jd.com)、[淘宝](https://ishop.taobao.com)、[美团](https://e.meituan.com)
+    - [抖音](https://fxg.jinritemai.com)、[快手](https://www.kwaixiaodian.com)、[小红书](https://ec.xiaohongshu.com)
   - 商城品牌
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
 
