--- a/电商代理.md
+++ b/电商代理.md
@@ -9,8 +9,12 @@
   - 商城品牌
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
 
-不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。
+不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
+电商理由：水果是一种地域性特别强的作物，适合电商；蔬菜是以本地化供应为主，不适合电商。
+         水果生产大省也是水果电商大省，如山东、广西、陕西等。
+国内市场：年营收额一万元以下的水果网店占80%，超过10万元的仅占5%，并且中小包装低价水果最受欢迎。
+
 1. 水果电商，是一条最难的赛道！
 例如：樱桃，包装时分三类：减少售后问题(坏果)
   同城快递=两天内+特熟果
