--- a/电商代理.md
+++ b/电商代理.md
@@ -3,7 +3,7 @@
 ### 代理
 
 - `水果`
-  - 商家小店
+  - 商家网店
     - [拼多多](https://www.pinduoduo.com)、[京东](https://lai.jd.com)、[淘宝](https://ishop.taobao.com)、[美团](https://e.meituan.com)
     - [抖音](https://fxg.jinritemai.com)、[快手](https://www.kwaixiaodian.com)、[小红书](https://ec.xiaohongshu.com)
   - 商城品牌
@@ -11,15 +11,60 @@
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
-电商理由：水果是一种地域性特别强的作物，适合电商；蔬菜是以本地化供应为主，不适合电商。
-         水果生产大省也是水果电商大省，如山东、广西、陕西等。
+电商理由：水果是一种地域性特别强的作物，适合电商；蔬菜是以本地化供应为主，不适合电商。水果生产大省也是水果电商大省，如山东、广西、陕西。
 国内市场：年营收额一万元以下的水果网店占80%，超过10万元的仅占5%，并且中小包装低价水果最受欢迎。
-
+~~~
+~~~
 1. 水果电商，是一条最难的赛道！
 例如：樱桃，包装时分三类：减少售后问题(坏果)
   同城快递=两天内+特熟果
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
 ~~~
+
+---
+
+### 渠道
+
+* 地方窗口
+~~~
+早先是政府委托专业公司运营淘宝、京东等地方馆，后来又授权一些大的网店承担地域公共品牌、地理标志等特色产品的销售，
+但整体看，宣传意义大于销售效果。当然，电商不仅是销售渠道，还是宣传媒体，也是品牌窗口，是提升产业的一个“翅膀”。
+销售一般的重要原因是，产品集合较多，但主打产品不突出，也没有形成供应链的有效整合和产品生产经营主体的有效利益联结机制，
+产品定价、营销定位等十分尴尬。
+~~~
+* 大宗电商
+~~~
+由于太关注零售电商，现在反倒忽略了大宗电商的作用。B2B其实出现比C2C还早，最早的电商就是从企业之间的交易撮合开始的。
+对于做供应链、做批发的企业而言，靠零售卖不了多少货，一单卖五六斤，一天卖几百单，其实挺累的，
+但是上了一亩田、惠农网、中农网等农产品网络批发平台，甚至是做小额批发的1688平台，达成一单有可能就是几十吨，对批发企业比较适用。
+~~~
+* 社交电商
+~~~
+最早的社交电商就是刷朋友圈，挺有效的；后来微博搞了商品橱窗，但效果一般，因为微博的社交属性没有微信强。
+拼多多通过社交关系的推广，加速实现了社交关系的变现，但时间久了也会引起心理逆反。而以快手为代表的直播带货，也可以视为社交电商，
+因为主要基于爱屋及乌逻辑。当然，直播卖货，平常宣传是基础，关键时刻再卖货，要把短视频作为基础，积累了粉丝才好卖。
+传统电商现在出现的一种情形是，网上买东西后引导加微信，然后再拉到顾客微信群里，定期发优惠券，比在网上营销费用还低，大家也能拿到实惠。
+~~~
+* 网店直销
+~~~
+有越来越多的水果企业、合作社、农户等借助网络平台开设自己的网店，销售自己生产的果品。一开始一些合作社、企业对传统电商平台寄予厚望，
+后来发现形同“鸡肋”，营销费用很高，挣不了钱。一个搞水果的老板说，每年电商卖几百万，连工资都不够付，最后把电商团队全砍了，转型做专业的供应链。
+归根结底，对于中西部的农产品生产经营者而言，进入电商的时间节点还是晚了一点，而运营又很不专业，在激烈的竞争中自然困难重重。
+~~~
+* 垂直电商
+~~~
+垂直电商从逻辑上看，是可以存在的，因为把某个领域内的产品做得十分精深，但是也受到综合平台和同类垂直电商平台的挑战，处境艰难。
+像“中粮我买网”，起步很早，本来是很有希望的，后来却没做大，反而是“本来生活”、“每日优鲜”这两年大家听说得比较多，而“网易优选”已经被卖给了阿里。
+~~~
+* 平台电商
+~~~
+平台电商一定不是普通人干的，熬了多少年，在C2C领域熬出一个淘宝，在B2C领域熬出一个京东，在社交电商领域熬出一个拼多多，
+今天在直播电商方面，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是，行业还有一句话，“老大老二打架，老三莫名其妙就死了”。
+搞平台九死一生，哪一个平台在成功之前不是烧了几十亿、几百亿？所以，对于一般创业者、一般企业而言，还是以选好平台、用好平台为主。
+~~~
+* 新零售
+* 跨境电商
+
 
 ---
