--- a/电商代理.md
+++ b/电商代理.md
@@ -49,19 +49,19 @@
 * 网店直销
 ~~~
 有越来越多的水果企业、合作社、农户等借助网络平台开设自己的网店，销售自己生产的果品。一开始一些合作社、企业对传统电商平台寄予厚望，
-后来发现形同“鸡肋”，营销费用很高，挣不了钱。一个搞水果的老板说，每年电商卖几百万，连工资都不够付，最后把电商团队全砍了，转型做专业的供应链。
-归根结底，对于中西部的农产品生产经营者而言，进入电商的时间节点还是晚了一点，而运营又很不专业，在激烈的竞争中自然困难重重。
+后来发现形同鸡肋，营销费用高，挣不了钱。一个卖水果的老板说，每年电商卖几百万，连工资都不够付，最后把电商团队全砍了，转型做专业供应链。
+归根结底，对于中西部的农产品生产经营者而言，进入电商的时间节点还是晚了点，而运营又很不专业，在激烈的竞争中自然困难重重。
 ~~~
 * 垂直电商
 ~~~
 垂直电商从逻辑上看，是可以存在的，因为把某个领域内的产品做得十分精深，但是也受到综合平台和同类垂直电商平台的挑战，处境艰难。
-像“中粮我买网”，起步很早，本来是很有希望的，后来却没做大，反而是“本来生活”、“每日优鲜”这两年大家听说得比较多，而“网易优选”已经被卖给了阿里。
+像“中粮我买网”，起步很早，本来很有希望，后来却没做大，反而是“本来生活”、“每日优鲜”这两年听说得比较多，而“网易优选”已经卖给了阿里。
 ~~~
 * 平台电商
 ~~~
-平台电商一定不是普通人干的，熬了多少年，在C2C领域熬出一个淘宝，在B2C领域熬出一个京东，在社交电商领域熬出一个拼多多，
-今天在直播电商方面，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是，行业还有一句话，“老大老二打架，老三莫名其妙就死了”。
-搞平台九死一生，哪一个平台在成功之前不是烧了几十亿、几百亿？所以，对于一般创业者、一般企业而言，还是以选好平台、用好平台为主。
+平台电商一定不是普通人干的，熬了多少年，在C2C领域熬出一个淘宝，B2C领域熬出一个京东，社交电商领域熬出一个拼多多。
+今天在直播电商领域，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是行业有一句话，“老大老二打架，老三莫名其妙死了”。
+搞平台九死一生，哪一个平台在成功之前不是烧了几十亿、几百亿？所以，对于一般创业者、一般企业而言，还是选好平台、用好平台为主。
 ~~~
 * 新零售
 * 跨境电商
