--- a/电商代理.md
+++ b/电商代理.md
@@ -12,14 +12,20 @@
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
 电商理由：水果是一种地域性特别强的作物，适合电商；蔬菜是以本地化供应为主，不适合电商。水果生产大省也是水果电商大省，如山东、广西、陕西。
-国内市场：年营收额一万元以下的水果网店占80%，超过10万元的仅占5%，并且中小包装低价水果最受欢迎。
 ~~~
 ~~~
-1. 水果电商，是一条最难的赛道！
+1. 水果电商，是一条很难的赛道！
+市场：年营收额一万元以下的水果网店占80%，超过10万元的仅占5%，并且中小包装和低价水果最受欢迎。
 例如：樱桃，包装时分三类：减少售后问题(坏果)
   同城快递=两天内+特熟果
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
+2. 电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户。
+3. 供应链体系不完善，导致消费者体验不好。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，有买家收货时已经包装破损，产品变质。
+4. 良莠不齐，意识不够，监管不到位。商家夸大宣传、以次充好，没有认证过绿色有机，乱喊乱贴。
+5. 人才匮乏。直播现在很火，但主要还是依靠组织、明星帮助农民代言。果农想自己直播，但缺少培训和指导。果农网红直播培训要重视起来。
+6. 组织发展目标“让手机成为新农具，让直播成为新农活，让农民成为新网红，让果品成为新网货，让数据成为新农资”。
+7. 电商发展建议：产品标准化、营销品牌化、渠道多样化、供应链条化、竞争规范化。
 ~~~
 
 ---
@@ -60,7 +66,7 @@
 * 平台电商
 ~~~
 平台电商一定不是普通人干的，熬了多少年，在C2C领域熬出一个淘宝，B2C领域熬出一个京东，社交电商领域熬出一个拼多多。
-今天在直播电商领域，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是行业有一句话，“老大老二打架，老三莫名其妙死了”。
+今天在直播电商领域，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是行业有一句话“老大老二打架，老三莫名其妙死了”。
 搞平台九死一生，哪一个平台在成功之前不是烧了几十亿、几百亿？所以，对于一般创业者、一般企业而言，还是选好平台、用好平台为主。
 ~~~
 * 新零售
