--- a/电商代理.md
+++ b/电商代理.md
@@ -11,7 +11,7 @@
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
-电商理由：水果是一种地域性特别强的作物，适合电商；蔬菜是以本地化供应为主，不适合电商。水果生产大省也是水果电商大省，如山东、广西、陕西。
+电商理由：水果的地域性很强，适合做电商；蔬菜以本地供应为主，不适合电商。水果生产大省山东、广西、陕西，也是水果电商大省。
 ~~~
 ~~~
 1. 水果电商，是一条很难的赛道！
@@ -20,7 +20,7 @@
   同城快递=两天内+特熟果
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
-2. 挣钱不多。供应链体系不完善，导致消费者体验不好。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时已经包装破损，产品变质。
+2. 挣钱不多。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
 3. 做好品控。电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户。
 4. 做好宣传。良莠不齐，意识不够，监管不到位。商家夸大宣传、以次充好，没有认证过绿色有机，乱喊乱贴。
 5. 人才匮乏。直播现在很火，但主要还是依靠组织、明星帮助农民代言。果农想自己直播，但缺少培训和指导。果农网红直播培训要重视起来。
@@ -50,12 +50,12 @@
 最早的社交电商就是刷朋友圈，挺有效的；后来微博搞了商品橱窗，但效果一般，因为微博的社交属性没有微信强。
 拼多多通过社交关系的推广，加速实现了社交关系的变现，但时间久了也会引起心理逆反。而以快手为代表的直播带货，也可以视为社交电商，
 因为主要基于爱屋及乌逻辑。当然，直播卖货，平常宣传是基础，关键时刻再卖货，要把短视频作为基础，积累了粉丝才好卖。
-传统电商现在出现的一种情形是，网上买东西后引导加微信，然后再拉到顾客微信群里，定期发优惠券，比在网上营销费用还低，大家也能拿到实惠。
+传统电商出现的一种情形是，网上买东西后引导加微信，然后再拉到顾客微信群里，定期发优惠券，比在网上营销费用低，大家也能拿到实惠。
 ~~~
 * 网店直销
 ~~~
 有越来越多的水果企业、合作社、农户等借助网络平台开设自己的网店，销售自己生产的果品。一开始一些合作社、企业对传统电商平台寄予厚望，
-后来发现形同鸡肋，营销费用高，挣不了钱。一个卖水果的老板说，每年电商卖几百万，连工资都不够付，最后把电商团队全砍了，转型做专业供应链。
+后来发现形同鸡肋，营销费用高，挣不了钱。一个卖水果的老板说，每年电商卖几百万，连工资都不够付，最后把电商团队砍了，转型专做供应链。
 归根结底，对于中西部的农产品生产经营者而言，进入电商的时间节点还是晚了点，而运营又很不专业，在激烈的竞争中自然困难重重。
 ~~~
 * 垂直电商
@@ -66,7 +66,7 @@
 * 平台电商
 ~~~
 平台电商一定不是普通人干的，熬了多少年，在C2C领域熬出一个淘宝，B2C领域熬出一个京东，社交电商领域熬出一个拼多多。
-今天在直播电商领域，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是行业有一句话“老大老二打架，老三莫名其妙死了”。
+在直播电商领域，快手和抖音还在激烈竞争。现在互联网只有老大，没有老二老三；更尴尬的是行业有一句话“老大老二打架，老三莫名其妙死了”。
 搞平台九死一生，哪一个平台在成功之前不是烧了几十亿、几百亿？所以，对于一般创业者、一般企业而言，还是选好平台、用好平台为主。
 ~~~
 * 新零售
@@ -80,7 +80,10 @@
 ~~~
 分拣工：0.20 / 人工费
 包装盒：1.80 / 保鲜纸盒
-快递费：6.80 / 10斤以内
+快递费：6.80 / 10斤以内(最低)
+  →→ 10斤●重庆●发货到 →→
+  重庆(10元)、四川(13～15元)、江浙沪(15元)、山东江西北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元)
+
 ~~~
 
 ---
