--- a/电商代理.md
+++ b/电商代理.md
@@ -82,7 +82,7 @@
 包装盒：1.80 / 保鲜纸盒
 快递费：6.80 / 10斤以内(最低)
   →→ 10斤●重庆●发货到 →→
-  重庆(10元)、四川(13～15元)、江浙沪(15元)、山东江西北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元)
+  重庆(10元)、四川(13～15元)、江浙沪(15元)、山东北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元不包邮)
 
 ~~~
 
