--- a/电商代理.md
+++ b/电商代理.md
@@ -76,7 +76,12 @@
 
 ### 谈钱
 
-* 发货
+* 价格销量
+~~~
+城镇实体店价格是农村网红带货的 2 ～ 10 倍
+网红带货的总销量是城镇实体店的 1万 ～ 100万 倍
+~~~
+* 电商发货
 ~~~
 分拣工：0.20 / 人工费
 包装盒：1.80 / 保鲜纸盒
