--- a/电商代理.md
+++ b/电商代理.md
@@ -84,10 +84,10 @@
 * 电商发货
 ~~~
 分拣工：0.20 / 人工费
-包装盒：1.80 / 保鲜纸盒
+包装盒：1.80 / 保鲜盒
 快递费：6.80 / 10斤以内(最低)
   →→ 10斤●重庆●发货到 →→
-  重庆(10元)、四川(13～15元)、江浙沪(15元)、山东北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元不包邮)
+  重庆(10元内)、四川(13～15元)、江浙沪(15元)、山东北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元不包邮)
 
 ~~~
 
