--- a/电商代理.md
+++ b/电商代理.md
@@ -8,6 +8,8 @@
     - [抖音](https://fxg.jinritemai.com)、[快手](https://www.kwaixiaodian.com)、[小红书](https://ec.xiaohongshu.com)
   - 商城品牌
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
+  - 微信社交
+    - 发优惠券
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
