--- a/电商代理.md
+++ b/电商代理.md
@@ -16,13 +16,13 @@
 电商理由：水果的地域性很强，适合做电商；蔬菜以本地供应为主，不适合电商。水果生产大省山东、广西、陕西，也是水果电商大省。
 ~~~
 ~~~
-1. 水果电商，是一条很难的赛道！
+1. 水果电商，是一条很难的赛道！关键还是看消费者有哪些？
 市场：年营收额一万元以下的水果网店占80%，超过10万元的仅占5%，并且中小包装和低价水果最受欢迎。
 例如：樱桃，包装时分三类：减少售后问题(坏果)
   同城快递=两天内+特熟果
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
-2. 挣钱不多。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
+2. 高消费少。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
 3. 做好品控。电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户。
 4. 做好宣传。良莠不齐，意识不够，监管不到位。商家夸大宣传、以次充好，没有认证过绿色有机，乱喊乱贴。
 5. 人才匮乏。直播现在很火，但主要还是依靠组织、明星帮助农民代言。果农想自己直播，但缺少培训和指导。果农网红直播培训要重视起来。
