--- a/电商代理.md
+++ b/电商代理.md
@@ -23,7 +23,7 @@
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
 2. 高消费少。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
-3. 做好品控。电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户。
+3. 做好品控。电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户，并做好调查问卷。
 4. 做好宣传。良莠不齐，意识不够，监管不到位。商家夸大宣传、以次充好，没有认证过绿色有机，乱喊乱贴。
 5. 人才匮乏。直播现在很火，但主要还是依靠组织、明星帮助农民代言。果农想自己直播，但缺少培训和指导。果农网红直播培训要重视起来。
 6. 组织发展目标：让手机成为新农具，让直播成为新农活，让农民成为新网红，让果品成为新网货，让数据成为新农资。
