--- a/电商代理.md
+++ b/电商代理.md
@@ -22,7 +22,7 @@
   同城快递=两天内+特熟果
   物流发货=七天内+中熟果
   特殊买家=十天内+未熟果
-2. 高消费少。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
+2. 消费降级。供应链不完善，导致消费体验差。包装、冷链、物流、仓储跟不上，影响保鲜和配送时效，买家收货时可能包装破损，产品变质。
 3. 做好品控。电商是直接对接终端顾客，没有中间环节，要重视货物标准化，记得每一箱水果都精准对应一个客户，并做好调查问卷。
 4. 做好宣传。良莠不齐，意识不够，监管不到位。商家夸大宣传、以次充好，没有认证过绿色有机，乱喊乱贴。
 5. 人才匮乏。直播现在很火，但主要还是依靠组织、明星帮助农民代言。果农想自己直播，但缺少培训和指导。果农网红直播培训要重视起来。
@@ -82,7 +82,7 @@
 ~~~
 城镇实体店价格是农村网红带货的 2 ～ 10 倍
 网红带货的总销量是城镇实体店的 1万 ～ 100万 倍
-由于中高消费者越来越少，建议不要加入百果园等零售连锁店。百果园在2024年关店近千家，巨亏四亿。
+由于高消费者变少，普通人消费降级，建议不要加入百果园等高端零售连锁店。百果园在去年关店近千家，巨亏四亿。
 ~~~
 * 电商发货
 ~~~
