--- a/电商代理.md
+++ b/电商代理.md
@@ -10,6 +10,19 @@
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
   - 微信社交
     - 发优惠券
+  - 直播带货
+    - 美女+流量
+      - +**+美食家 (吃货直播)
+      - +**+生活小妙招 (生活直播)
+    - 套路+流量
+      - 深圳偶遇12元一桶的水果捞！好多品种都挑花眼了！
+      - 深圳夜市的水果捞，10块24种水果小料任你选，打了满满一桶好好吃！
+      - 农村做电商卖水果，发快递要多少钱？看到这价格就明白为啥水果贵！
+      - 实拍广西小伙电商助农，从直播开始到摘果打包发货，全程亲力亲为！
+      - 小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！
+      - 做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！
+      - 小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。
+
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
 ~~~
@@ -81,8 +94,8 @@
 * 价格销量
 ~~~
 城镇实体店价格是农村网红带货的 2 ～ 10 倍
-网红带货的总销量是城镇实体店的 1万 ～ 100万 倍
-由于高消费者变少，普通人消费降级，建议不要加入百果园等高端零售连锁店。百果园在去年关店近千家，巨亏四亿。
+直播带货的总销量是城镇实体店的 1万 ～ 10万 倍
+由于消费降级，建议不要加入百果园等高端零售连锁店。百果园在去年关店近千家，巨亏四个亿。
 ~~~
 * 电商发货
 ~~~
