--- a/电商代理.md
+++ b/电商代理.md
@@ -4,8 +4,8 @@
 
 - `水果`
   - 商家网店
-    - [拼多多](https://www.pinduoduo.com)、[京东](https://lai.jd.com)、[淘宝](https://ishop.taobao.com)、[美团](https://e.meituan.com)
-    - [抖音](https://fxg.jinritemai.com)、[快手](https://www.kwaixiaodian.com)、[小红书](https://ec.xiaohongshu.com)
+    - [拼多多](https://www.pinduoduo.com)、[京东](https://lai.jd.com)、[淘宝](https://ishop.taobao.com)、[美团](https://e.meituan.com)、[闲鱼](https://www.goofish.com)
+    - [抖音](https://fxg.jinritemai.com)、[快手](https://www.kwaixiaodian.com)、[小红书](https://ec.xiaohongshu.com)、[淘宝直播](https://taolive.taobao.com)、[微视](https://weishi.qq.com)、[微信视频号](https://channels.weixin.qq.com)
   - 商城品牌
     - [深圳花果山科技有限公司](http://www.huaguoshan.com)
   - 微信社交
