--- a/电商代理.md
+++ b/电商代理.md
@@ -106,6 +106,15 @@
   重庆(10元内)、四川(13～15元)、江浙沪(15元)、山东北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元不包邮)
 
 ~~~
+* 成本利润
+~~~
+1. 农药化肥
+2. 采摘种植
+3. 仓库物流
+4. 电商团队
+5. 网络平台
+6. 国家补贴
+~~~
 
 ---
 
