--- a/电商代理.md
+++ b/电商代理.md
@@ -15,6 +15,7 @@
       - +**+美食家 (吃货直播)
       - +**+生活小妙招 (生活直播)
     - 套路+流量
+      - [翠梨成熟了，一行人前往电商大厦洽谈合作，果农邀请我们果园考察](https://pan.baidu.com/s/1ZG6WQeo6Ir0xkz_kQ4huJg?pwd=hzi5)
       - 深圳偶遇12元一桶的水果捞！好多品种都挑花眼了！
       - 深圳夜市的水果捞，10块24种水果小料任你选，打了满满一桶好好吃！
       - 农村做电商卖水果，发快递要多少钱？看到这价格就明白为啥水果贵！
