--- a/电商代理.md
+++ b/电商代理.md
@@ -16,13 +16,13 @@
       - +**+生活小妙招 (生活直播)
     - 套路+流量
       - [翠梨成熟了，一行人前往电商大厦洽谈合作，果农邀请我们果园考察](https://pan.baidu.com/s/1ZG6WQeo6Ir0xkz_kQ4huJg?pwd=hzi5)
-      - 深圳偶遇12元一桶的水果捞！好多品种都挑花眼了！
-      - 深圳夜市的水果捞，10块24种水果小料任你选，打了满满一桶好好吃！
-      - 农村做电商卖水果，发快递要多少钱？看到这价格就明白为啥水果贵！
-      - 实拍广西小伙电商助农，从直播开始到摘果打包发货，全程亲力亲为！
-      - 小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！
-      - 做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！
-      - 小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。
+      - [深圳偶遇12元一桶的水果捞！好多品种都挑花眼了！](https://pan.baidu.com/s/1FILdc80mMOIO5mn-DuFlRw?pwd=z46a)
+      - [深圳夜市的水果捞，10块24种水果小料任你选，打了满满一桶好好吃！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - [农村做电商卖水果，发快递要多少钱？看到这价格就明白为啥水果贵！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - [实拍广西小伙电商助农，从直播开始到摘果打包发货，全程亲力亲为！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - [小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
 
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
