--- a/电商代理.md
+++ b/电商代理.md
@@ -11,6 +11,9 @@
   - 微信社交
     - 发优惠券(群)
   - 直播带货
+    - 解读+流量
+      - 通过解读央视(或百万大V主播)的视频，来博取流量(关键是标题要响亮)
+      - 通过解读电影(或综艺节目)的视频，来博取流量(只要不造成社会影响)
     - 美女+流量
       - +**+美食家 (吃货直播)
       - +**+生活小妙招 (生活直播)
