--- a/电商代理.md
+++ b/电商代理.md
@@ -93,31 +93,31 @@
 
 ---
 
-### 谈钱
+### 赚钱
 
 * 价格销量
 ~~~
-城镇实体店价格是农村网红带货的 2 ～ 10 倍
-直播带货的总销量是城镇实体店的 1万 ～ 10万 倍
+城镇实体店价格是农村网红带货的 1 ～ 10 倍
+电商直播带货的销量是城镇实体店的 1万 ～ 10万 倍
 由于消费降级，建议不要加入百果园等高端零售连锁店。百果园在去年关店近千家，巨亏四个亿。
 ~~~
-* 电商发货
+* 电商发货(适合冷链保鲜的农产品)
 ~~~
 分拣工：0.20 / 人工费
 包装盒：1.80 / 保鲜盒
 快递费：6.80 / 10斤以内(最低)
   →→ 10斤●重庆●发货到 →→
   重庆(10元内)、四川(13～15元)、江浙沪(15元)、山东北京(18～20元)、黑龙江(25元)、内蒙古(45元)、新疆西藏(85～100元不包邮)
-
 ~~~
-* 成本利润
+* 成本利润(各挣各的钱)
 ~~~
-1. 农药化肥
-2. 采摘种植
-3. 仓库物流
-4. 电商团队
-5. 网络平台
-6. 国家补贴
+1. ― 农药化肥(合作社)
+2. ― 采摘种植(合作社)
+3. ― 仓储物流(电商发货)
+4. ― 电商团队(销售经营)
+5. ― 网络平台(支付平台)
+6. ― 缴纳税收
+7. + 领取补贴
 ~~~
 
 ---
