--- a/电商代理.md
+++ b/电商代理.md
@@ -26,6 +26,7 @@
       - [小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
+      - 自己定目标、自己出卷、自己做卷、自己批卷、自己解释成绩，在这种自我为中心的模式下，成不成、成多少都自己说了算，就是想给自己评价两个字“牛批”！
 
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
