--- a/电商代理.md
+++ b/电商代理.md
@@ -14,6 +14,8 @@
     - 解读+流量
       - 通过解读央视(或百万大V主播)的视频，来博取流量(关键是标题要响亮)
       - 通过解读电影(或综艺节目)的视频，来博取流量(只要不造成社会影响)
+      - 自己定目标、自己出卷、自己做卷、自己批卷、自己解释成绩，在这种自我为中心的模式下，成不成、成多少都自己说了算，就是想给自己评价两个字“牛批”！
+      - 有钱人家的孩子15岁就知道一个真相：“世上最可怜的孩子就是那些有家教无家底的没有赚钱本事的人，最终都会成为道德高尚的穷人”！
     - 美女+流量
       - +**+美食家 (吃货直播)
       - +**+生活小妙招 (生活直播)
@@ -26,7 +28,6 @@
       - [小伙开网店卖水果，贴假标签近500万，溢价50%～300%，被警方查获时销售金额已达十万元！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [做10天荔枝生意能挣多少钱？队长新系列开启，深入水果销售，采购，加工，带你了解电商各个环节的运营模式！](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
       - [小夫妻做水果电商，每次带货都要遭受质疑，说成是中间商二道贩子。中间商本该是煲义词，对商品的流通和销售至关重要，现在更多时候成了贬义词。](https://pan.baidu.com/s/1w1pFC--tXIHD6u7-AfgnLA?pwd=wens)
-      - 自己定目标、自己出卷、自己做卷、自己批卷、自己解释成绩，在这种自我为中心的模式下，成不成、成多少都自己说了算，就是想给自己评价两个字“牛批”！
 
 
 不论是做水果的生产还是销售，都必须关注电商，因为趋势代表着未来。<br>
