--- a/电商代理.md
+++ b/电商代理.md
@@ -14,8 +14,8 @@
     - 解读+流量
       - 通过解读央视(或百万大V主播)的视频，来博取流量(关键是标题要响亮)
       - 通过解读电影(或综艺节目)的视频，来博取流量(只要不造成社会影响)
+      - 有钱人家的孩子15岁就知道真相：世上最可怜的就是那些有家教无家底的没有赚钱能力的人，最终成了道德高尚的穷人！
       - 自己定目标、自己出卷、自己做卷、自己批卷、自己解释成绩，在这种自我为中心的模式下，成不成、成多少都自己说了算，就是想给自己评价两个字“牛批”！
-      - 有钱人家的孩子15岁就知道真相：世上最可怜的就是那些有家教无家底的没有赚钱能力的人，最终成为道德高尚的穷人！
     - 美女+流量
       - +**+美食家 (吃货直播)
       - +**+生活小妙招 (生活直播)
