--- a/电商代理.md
+++ b/电商代理.md
@@ -13,8 +13,9 @@
   - 直播带货
     - 解读+流量
       - 通过解读央视(或百万大V主播)的视频，来博取流量(关键是标题要响亮)
-      - 通过解读电影(或综艺节目)的视频，来博取流量(只要不造成社会影响)
-      - 有钱人家的孩子15岁就知道真相：世上最可怜的就是那些有家教无家底的没有赚钱能力的人，最终成了道德高尚的穷人！
+      - 通过解读电影(或综艺节目)的视频，来博取流量(只要不造成坏的社会影响)
+      - 抱怨自己吃的饭里面有一粒屎，称赞自己吃的屎里面有一粒米！(暴露人性)
+      - 有钱人家的孩子15岁就知道真相：世上最可怜的就是那些有家教无家底的没有赚钱能力的人，最终成了道德高尚的穷人！(敏感)
       - 自己定目标、自己出卷、自己做卷、自己批卷、自己解释成绩，在这种自我为中心的模式下，成不成、成多少都自己说了算，就是想给自己评价两个字“牛批”！
     - 美女+流量
       - +**+美食家 (吃货直播)
