--- a/社区电商.md
+++ b/社区电商.md
@@ -11,10 +11,14 @@
 
 ---
 
-### 电商
+### 品牌创新
 
 1. 党建品牌 : 社区党委聚焦***品牌建设，确立发展治理思路，推动辖区治理创新***，获评四川省基层治理示范社区、省级“民主法治示范”社区、成都市先进基层党组织、成都市“十佳”网格等多余项荣誉！
    关注文化宣传与建设街景、打造小区卫生环境、老旧院落改造、推动人才建设和网格化管理等。
 2. 网络品牌 : 探索网络公开课、年轻人青睐的直播业态和服务项目入驻社区，链接各大 "微信公众号平台"，"抖音平台"，如网络平台"成都本地宝"等宣传。
+
+---
+
+### [电商代理](电商代理.md)
 
 ---
